Add convolution layer

--- a/cnn-scratch.ipynb
+++ b/cnn-scratch.ipynb
@@ -37,6 +37,32 @@
     "\n",
     "print(\"Input shape:\", input_image.shape)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aac163d7-3722-4365-9f39-f934add3ad4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %%\n",
+    "\n",
+    "# adding convolution layer with no padding and stride = 1\n",
+    "def conv2d(X, kernel, stride=1):\n",
+    "    B, C, H, W = X.shape\n",
+    "    _, _, KH, KW = kernel.shape\n",
+    "    out_h = (H - KH) // stride + 1\n",
+    "    out_w = (W - KW) // stride + 1\n",
+    "\n",
+    "    out = np.zeros((B, 1, out_h, out_w))\n",
+    "\n",
+    "    for b in range(B):\n",
+    "        for i in range(0, out_h):\n",
+    "            for j in range(0, out_w):\n",
+    "                region = X[b, 0, i:i+KH, j:j+KW]\n",
+    "                out[b, 0, i, j] = np.sum(region * kernel[0, 0])\n",
+    "    return out"
+   ]
   }
  ],
  "metadata": {
